redis-slave.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-slave
  namespace: backend
spec:
  selector:
    matchLabels:
      app: redis
      role: slave
      tier: backend
  replicas: 3
  template:
    metadata:
      labels:
        app: redis
        role: slave
        tier: backend
    spec:
      containers:
      - name: slave
        image: gcr.io/google_samples/gb-redisslave:v1
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
  namespace: backend
  labels:
    app: redis
    role: slave
    tier: backend
spec:
  ports:
  - port: 6379
  selector:
    app: redis
    role: slave
    tier: backend
