ingress-deploy.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo-external-2
  namespace: frontend
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: foo.example.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: frontend-public-2
            port:
              number: 80
